<resources>
    <string name="app_name">Projet Technologique Android</string>
    <string name="javaFunctions">Version Java</string>
    <string name="renderscriptFunctions">Version Renderscript</string>
    <string name="baseAlgorithm">Algorithmes de base</string>
    <string name="baseAlgorithmRS">Algorithmes de base (RS)</string>
    <string name="convolutionAlgorithm">Algorithmes de convolution</string>
    <string name="convolutionAlgorithmRS">Algorithmes de convolution (RS)</string>
    <string name="advancedAlgorithm">Algorithmes avancés</string>
    <string name="advancedAlgorithmRS">Algorithmes avancés (RS)</string>
    <string name="gray">Niveaux de gris</string>
    <string name="invert">Inversion des couleurs</string>
    <string name="colorize">Colorisation</string>
    <string name="keepColor">Conservation</string>
    <string name="brightness">Modification de la luminosité</string>
    <string name="contrast">Modification du contraste</string>
    <string name="dynamicExpansion">Extension de dynamique</string>
    <string name="histogramEqualization">Egalisation d\'histogramme</string>
    <string name="reinitialization">Réinitialisation de l\'image</string>
    <string name="back">Retour</string>
    <string name="histo">Obtenir l\'histogramme</string>
    <string name="averageFilter">Filtre moyenneur</string>
    <string name="gaussConvolution">Filtre Gaussien</string>
    <string name="sobelConvolution">Filtre de Sobel</string>
    <string name="laplacienConvolution">Filtre Laplacien</string>
    <string name="pencilEffect">Effet crayonné</string>
    <string name="cartoonEffect">Effet cartoon</string>
    <string name="snowEffect">Effet de neige</string>
    <string name="incrustation">Incrustation d\'objets</string>
    <string name="validate">OK</string>
    <string name="cancel">ANNULER</string>
    <string name="saveImage">Sauvegarder l\'image</string>
    <string name="gallery">Charger une image</string>
    <string name="photo">Prendre une photo</string>

    <string-array name="gaussChoices">
        <item>3</item>
        <item>5</item>
    </string-array>

    <string-array name="keepColorInterval">
        <item>Extérieur de l\'intervalle créé par les deux valeurs choisies</item>
        <item>Intérieur de l\'intervalle créé par les deux valeurs choisies</item>
    </string-array>

    <string-array name="graySketch">
        <item>Minimum</item>
        <item>Moyen</item>
        <item>Élevé</item>
    </string-array>
</resources>
