<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/javaFunctions"
        android:title="@string/javaFunctions">
        <menu>
            <item
                android:id="@+id/baseAlgo"
                android:title="@string/baseAlgorithm">
                <menu>
                    <item
                        android:id="@+id/gray"
                        android:title="@string/gray" />
                    <item
                        android:id="@+id/invertColor"
                        android:title="@string/invert" />
                    <item
                        android:id="@+id/colorize"
                        android:title="@string/colorize" />
                    <item
                        android:id="@+id/keepColor"
                        android:title="@string/keepColor" />
                    <item
                        android:id="@+id/brightness"
                        android:title="@string/brightness" />
                    <item
                        android:id="@+id/contrast"
                        android:title="@string/contrast" />
                    <item
                        android:id="@+id/dynamicExpansion"
                        android:title="@string/dynamicExpansion" />
                    <item
                        android:id="@+id/histogramEqualization"
                        android:title="@string/histogramEqualization" />
                </menu>
            </item>
            <item
                android:id="@+id/convolutionAlgo"
                android:title="@string/convolutionAlgorithm">
                <menu>
                    <item
                        android:id="@+id/averageFilter"
                        android:title="@string/averageFilter" />
                    <item
                        android:id="@+id/gaussConvolution"
                        android:title="@string/gaussConvolution" />
                    <item
                        android:id="@+id/sobelConvolution"
                        android:title="@string/sobelConvolution" />
                    <item
                        android:id="@+id/laplacienConvolution"
                        android:title="@string/laplacienConvolution" />
                </menu>
            </item>
            <item
                android:id="@+id/advancedAlgo"
                android:title="@string/advancedAlgorithm">
                <menu>
                    <item
                        android:id="@+id/pencilEffect"
                        android:title="@string/pencilEffect" />
                    <item
                        android:id="@+id/cartoonEffect"
                        android:title="@string/cartoonEffect" />
                    <item
                        android:id="@+id/snowEffect"
                        android:title="@string/snowEffect" />
                    <item
                        android:id="@+id/imageIncrustation"
                        android:title="@string/incrustation" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/renderscriptFunctions"
        android:title="@string/renderscriptFunctions">
        <menu>
            <item
                android:id="@+id/baseAlgoRS"
                android:title="@string/baseAlgorithmRS">
                <menu>
                    <item
                        android:id="@+id/grayRS"
                        android:title="@string/gray" />
                    <item
                        android:id="@+id/invertColorRS"
                        android:title="@string/invert" />
                    <item
                        android:id="@+id/colorizeRS"
                        android:title="@string/colorize" />
                    <item
                        android:id="@+id/keepColorRS"
                        android:title="@string/keepColor" />
                    <item
                        android:id="@+id/brightnessRS"
                        android:title="@string/brightness" />
                    <item
                        android:id="@+id/contrastRS"
                        android:title="@string/contrast" />
                    <item
                        android:id="@+id/dynamicExpansionRS"
                        android:title="@string/dynamicExpansion" />
                    <item
                        android:id="@+id/histogramEqualizationRS"
                        android:title="@string/histogramEqualization" />
                </menu>
            </item>
            <item
                android:id="@+id/convolAlgoRS"
                android:title="@string/convolutionAlgorithmRS">
                <menu>
                    <item
                        android:id="@+id/averageFilterRS"
                        android:title="@string/averageFilter"/>
                    <item
                        android:id="@+id/gaussConvolutionRS"
                        android:title="@string/gaussConvolution" />
                    <item
                        android:id="@+id/sobelConvolutionRS"
                        android:title="@string/sobelConvolution"/>
                    <item
                        android:id="@+id/laplacienConvolutionRS"
                        android:title="@string/laplacienConvolution" />
                </menu>
            </item>
            <item
                android:id="@+id/advancedAlgoRS"
                android:title="@string/advancedAlgorithmRS">
                <menu>
                    <item
                        android:id="@+id/pencilEffectRS"
                        android:title="@string/pencilEffect" />
                    <item
                        android:id="@+id/cartoonEffectRS"
                        android:title="@string/cartoonEffect" />
                    <item
                        android:id="@+id/snowEffectRS"
                        android:title="@string/snowEffect" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/reinitialization"
        android:title="@string/reinitialization" />
</menu>